--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,6 @@
 ---
 include:
   - board: seeeduino_xiao_ble
-    shield: corny_left rgbled_adapter
+    shield: harsha_left rgbled_adapter
   - board: seeeduino_xiao_ble
-    shield: corny_right rgbled_adapter
+    shield: harsha_right rgbled_adapter
