--- a/config/boards/shields/harsha/harsha_left.conf
+++ b/config/boards/shields/harsha/harsha_left.conf
@@ -1,4 +1,19 @@
 CONFIG_NFCT_PINS_AS_GPIOS=y
-CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+# Sleep timeout 30 mins
 CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
+
+# Enable eager debouncing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
+
+# Fix battery reporting on Windows
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+
+# Experimental: BLE improvements
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+
+# Report battery peripheral battery level
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
