--- a/config/west.yml
+++ b/config/west.yml
@@ -2,6 +2,8 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: urob
+      url-base: https://github.com/urob
     - name: caksoylar
       url-base: https://github.com/caksoylar
   projects:
@@ -12,5 +14,11 @@ manifest:
     - name: zmk-rgbled-widget
       remote: caksoylar
       revision: main
+    - name: zmk-auto-layer
+      remote: urob
+      revision: main
+    - name: zmk-tri-state
+      remote: caksoylar
+      revision: split-locality
   self:
     path: config
