--- a/build.yaml
+++ b/build.yaml
@@ -13,7 +13,7 @@
 #
 ---
 include:
-  - board: seeeduino_xiao_ble
+  - board: corne_left
     shield: harsha_left rgbled_adapter
-  - board: seeeduino_xiao_ble
+  - board: corne_right
     shield: harsha_right rgbled_adapter
