--- a/config/boards/shields/harsha/harsha.conf
+++ b/config/boards/shields/harsha/harsha.conf
@@ -1,6 +1,3 @@
-# Boost Bluetooth TX power
-#CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
 # Require passkey on pairing
 #CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
 
@@ -21,3 +18,20 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 # Report battery peripheral battery level
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+
+# Enable mouse
+CONFIG_ZMK_POINTING=y
+# CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
+
+# Combo config, automated by build script
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=6
+CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=3
+
+# Don't show layer status
+#CONFIG_CUSTOM_WIDGET_BATTERY_STATUS=n
+CONFIG_CUSTOM_WIDGET_LAYER_STATUS=n
+
+# Bluetooth tweaks
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
